--- a/portfolio.html
+++ b/portfolio.html
@@ -1,8 +1,11 @@
 <!DOCTYPE html>
 <head>
-    <title>Zuzeth's Portfolio</title>
+<title>Zuzeth's Portfolio</title>
 
-<link rel="stylesheet" href="assets/css/style.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="assets/css/style.css">
 
 </head>
 
