--- a/index.html
+++ b/index.html
@@ -29,15 +29,15 @@
 <img class="Me" src="../Basic-Portfolio/assets/images/Me.jpeg">
 
     <p>
-        Hello! My name is Zuzeth pronouned "Zoo-Zeth", just like my name I like to provide a unique perspective into everything I go into. I love learning and improving on myself, my career aspirations, and my education.
+        Hello! My name is Zuzeth pronouned "Zoo-Zeth", just like my name I like to provide a unique perspective into everything I do. I love learning and improving on myself, my career aspirations, and my education.
         My motto for learning is to learn constantly and daily. 
     </p>
     <p>
-        I enjoy reading non-fiction, money management, inspirational, and motivational books. My current read right now is Awaken the Giant Within by Tony Robbins.
-        I also like to stay active mostly through hiking and working out in my living room. 
+        I am currently attending the University of Utah Full Stack Coding Boot Camp. I began this program in April 2019 and am set to graduate by October 2019. I have learned HTML, CSS, Javascript, JQuery and still continue to learn 
+        new functions and programs everyday.
     </p>
     <p>
-        I'm taking the U of U Coding Bootcamp in hopes that I can start a new career path. My goal is to enjoy what I do for a living. 
+        During this program I have discovered a passion of mine, UI/UX Design, it is something I wish to pursue professionally and am excited for an opportunity to enter this new career.
     </p>
 </div>
 
